--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -6,14 +6,24 @@
     <title>Page Title - Entry 1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div>
-      <h2>Header</h2>
-      <p>This is entry 1.</p>
-    </div>
+  <body> 
+  <h1>The Warmth of the Tangible</h1>
 
+  <h2>10 Words About Tangible</h2>
 
-    <h2>Header</h2>
-    <p>This is entry 1.</p>
-  </body>
+  <p>Warmth, Touch, Grain, Weight, Texture, Trace, Smell, Sound, Uniqueness, Memory</p>
+
+  <h2>Introduction</h2>
+    <p>This website is a collection of tangible objects — a small archive of things that can be touched, held, and kept. It explores why these items still matter and what kind of warmth they bring in contrast to digital media.</p>
+
+    <h2>Why Tangible Matters</h2>
+    <p>In today's electronic society, almost everything has turned into screens and files. Yet physical objects carry a unique sense of presence: the texture of paper, the weight of a vinyl record, or the sound of a cassette tape spinning. They feel alive in a way that digital cannot replace.</p>
+
+    <h2>My Perspective</h2>
+    <p>I have always been drawn to real, physical things. A handwritten note feels more personal than a text message, and listening to music on a CD or vinyl feels more intentional than streaming. These objects create simple rituals and moments of connection that bring comfort and warmth.</p>
+
+</body>
+<nav>
+  <a href="/">Home</a>
+</nav>
 </html>
