--- a/Mondrian/index.html
+++ b/Mondrian/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel="stylesheet" href="style.css">
-</head>
+
+  <section>
+    <div class="black">
+        
+    </div>
+  </section>
