--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -13,6 +13,13 @@
   <main>
     <h1>Film Cameras</h1>
 
+    <div class="camera">
+    <img src="camera1.png" alt="Camera Normal" class="camera1">
+    <img src="camera2.png" alt="Camera with Flash" class="camera2">
+  </div>
+</body>
+</html>
+
     <h2>The Art of Waiting</h2>
     <p>Film cameras are not just machines to take pictures — they are tools that keep memories alive. Each photograph begins with loading a roll of film, followed by the quiet click of the shutter, and finally, days or even weeks later, the images appear in a darkroom or photo lab.</p>
     <p>Unlike digital cameras, which give instant results, film forces us to slow down and wait. This waiting is not just a delay — it changes how we experience photography. Instead of taking hundreds of shots without thinking, film encourages us to pause and be more mindful. The gap between taking a picture and seeing the result adds mystery and excitement. Every roll feels like a story that takes time to unfold.</p>
