--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -1,58 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Title - Entry 2</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>Vinyl Records - Entry 2</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700&family=Playfair+Display:ital,wght@1,400&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-<head>
+
+<body>
+  <main>
     <h1>Vinyl Records</h1>
-</head>
-<body
-     <h2>The Warmth of Sound</h2>
-     <p>
-      Vinyl records are more than just a way to play music — they carry weight, texture, and warmth.
-      The gentle crackle of the needle touching the groove feels alive, reminding us that imperfection
-      can be beautiful. Holding a record, turning it over, and studying its cover art transforms
-      listening into a mindful ritual.
-    </p>
-    <img src="R.png"> <img src="Aretha_Franklin_-_LadySoul_-_LP_Clear_Vinyl_-_Atlantic_75_Reissue_2048x2048.png">
+
+    <div class="record">
+      <img src="vinyl.png" alt="Vinyl Record" class="record-img">
+    </div>
+
+    <h2>The Warmth of Sound</h2>
+    <p>Vinyl records are more than just a way to play music — they carry weight, texture, and warmth. The gentle crackle of the needle touching the groove feels alive, reminding us that imperfection can be beautiful. Holding a record, turning it over, and studying its cover art transforms listening into a mindful ritual.</p>
+
     <h2>History</h2>
-    <p>
-      Vinyl records became popular in the mid-20th century and defined music culture for decades. Even when 
-      CDs and streaming took over, vinyl never really went away. In fact, it’s made a big comeback in recent 
-      years, as people fall in love again with the unique sound and physical presence that digital music 
-      just can’t match.
-    </p>
+    <p>Vinyl records became popular in the mid-20th century and defined music culture for decades. Even when CDs and streaming took over, vinyl never really went away. In fact, it’s made a big comeback in recent years, as people fall in love again with the unique sound and physical presence that digital music just can’t match.</p>
 
     <h2>How It Works</h2>
-    <p>
-      To play a record, you place it on a turntable, gently lower the needle, and let it spin.
-      Music emerges from the microscopic grooves, amplified into sound. Every step, from pulling 
-      the record out of its sleeve to flipping it over and hearing those first crackles, makes 
-      listening feel slower, more focused, and more real than just hitting “play” on a streaming app.
-    </p>
+    <p>To play a record, you place it on a turntable, gently lower the needle, and let it spin. Music emerges from the microscopic grooves, amplified into sound. Every step, from pulling the record out of its sleeve to flipping it over and hearing those first crackles, makes listening feel slower, more focused, and more real than just hitting “play” on a streaming app.</p>
 
     <h2>Why It Matters</h2>
-    <p>
-      Vinyl demands attention. Unlike endless digital playlists, it asks you to commit to an album,
-      to sit down and listen. Each record is not only sound, but also an object: the artwork, the
-      texture, and the small imperfections that make every listen unique. It’s music you can touch,
-      see, and feel.
-    </p>
-  </body>
-  <nav>
-  <a href="/">Home</a>
-  </nav>
-  <p>
-    Thoughts:
-    Background Animation: A rotating vinyl record.
-    Effects: 1.When the mouse hovers over the record, the needle moves into place and starts playing.
-    2. Random visual grain appear across the webpage, simulating analog imperfections.
-    Supporting Material: An instructional video showing how to use a vinyl record player.
-  </p>
+    <p>Vinyl demands attention. Unlike endless digital playlists, it asks you to commit to an album, to sit down and listen. Each record is not only sound, but also an object: the artwork, the texture, and the small imperfections that make every listen unique. It’s music you can touch, see, and feel.</p>
+  </main>
+</body>
 </html>
