--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -8,3 +8,22 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+  <main>
+    <h1>Polaroid Moments</h1>
+
+    <h2>Instant Magic</h2>
+    <p>Polaroid cameras capture not just an image, but a moment becoming visible. When you press the shutter, there’s a small sound and then a short wait as the photo slowly appears. It feels like something real is forming right in your hands.</p>
+
+    <h2>The Beauty of Imperfection</h2>
+    <p>Every Polaroid print is a little different. The colors might shift, the light might be uneven, and sometimes there’s a small mark on the film. Instead of fixing these, we keep them — because they make the photo personal. They’re a reminder that memory isn’t perfect either.</p>
+
+    <h2>Holding Time</h2>
+    <p>Unlike digital photos, a Polaroid makes you slow down. You have to wait for the image to appear. That waiting becomes part of the experience. You can literally watch a moment develop in front of you.</p>
+
+    <h2>Why It Matters</h2>
+    <p>In a world where we take hundreds of photos without thinking, a single instant print feels special. It’s something you can hold, pin on a wall, or give to someone. It turns a quick snapshot into a small physical memory.</p>
+  </main>
+</body>
+</html>
