--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -14,14 +14,21 @@
     <h1>Polaroid Moments</h1>
 
     <h2>Instant Magic</h2>
-    <p>Polaroid cameras capture not just an image, but a moment becoming visible. When you press the shutter, there’s a small sound and then a short wait as the photo slowly appears. It feels like something real is forming right in your hands.</p>
+    <p>Polaroid cameras capture not just an image, but a moment becoming visible. When you press the shutter, there’s a small sound and then a short wait as the photo slowly appears. That waiting, even just a few seconds, feels meaningful — like the moment itself is unfolding in your hands.
+There’s a quiet joy in watching colors rise from blank white. It’s something between science and magic, a little unpredictable every time.</p>
 
     <h2>The Beauty of Imperfection</h2>
-    <p>Every Polaroid print is a little different. The colors might shift, the light might be uneven, and sometimes there’s a small mark on the film. Instead of fixing these, we keep them — because they make the photo personal. They’re a reminder that memory isn’t perfect either.</p>
+    <p>Every Polaroid print is slightly different. The colors might shift, the edges might fade, or a shadow might appear in an unexpected place. Instead of flaws, these details make the photo feel alive. You can’t copy or edit it — it exists only once.
+Each picture feels more like a memory than a record. The imperfections remind us that the beauty of a moment often lies in its irregularities.</p>
 
     <h2>Holding Time</h2>
-    <p>Unlike digital photos, a Polaroid makes you slow down. You have to wait for the image to appear. That waiting becomes part of the experience. You can literally watch a moment develop in front of you.</p>
+    <p>A Polaroid is both photo and object. It has weight, texture, and even a smell. Holding it connects you to the moment it was taken — the light, the air, the people there. Unlike a photo on a phone, it doesn’t live behind glass; it lives in your hands.
+You can tape it on a wall, tuck it into a book, or give it to someone. It collects fingerprints, dust, and years — all small signs of a life lived.</p>
 
+  <h2>A Different Kind of Waiting</h2>
+  <p>Unlike digital photography, Polaroid makes you slow down. Each film pack only has a few shots, so you think carefully before pressing the button. Afterward, you wait. That pause — the few seconds before the image appears — creates a space for attention. You look more closely, breathe more slowly.
+This rhythm contrasts sharply with the instant pace of digital life. It’s not just taking a picture; it’s taking a moment to be present.</p>
+   
     <h2>Why It Matters</h2>
     <p>In a world where we take hundreds of photos without thinking, a single instant print feels special. It’s something you can hold, pin on a wall, or give to someone. It turns a quick snapshot into a small physical memory.</p>
   </main>
