--- a/the-circle/index.html
+++ b/the-circle/index.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="circle"></div>
     <div>
         <script src="'script.js"></script>
     </div>
 </body>
 
-<div class=".circle"></div>
+<div class="circle"></div>
 
 </html>
