--- a/entry-10/index.html
+++ b/entry-10/index.html
@@ -15,7 +15,7 @@
     <!-- Hero: 主标题 PNG -->
     <section class="hero">
       <!-- 替换成你自己的 title.png -->
-      <img src="title.png" alt="The Warmth of Tangible Things" class="hero-title">
+      <img src="Title.png" alt="The Warmth of Tangible Things" class="hero-title">
     </section>
 
     <!-- 副标题 -->
