--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -1,33 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Title - Entry 1</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body> 
-  <h1>The Warmth of the Tangible</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>Page Title - Entry 1</title>
 
-  <h2>10 Words About Tangible</h2>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@400;700&family=Playfair+Display:ital,wght@1,400&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <main>
+    <h1>Cassette Tapes</h1>
 
-  <p>Warmth, Touch, Grain, Weight, Texture, Trace, Smell, Sound, Uniqueness, Memory</p>
+    <h2>The Charm of Imperfection</h2>
+    <p>
+      A cassette tape is never perfect — and that’s what makes it beautiful. The soft hiss beneath the music, the gentle
+      warping of sound, the subtle imperfections that come from time and touch. Unlike digital audio, which is polished
+      and flawless, a cassette feels alive. It breathes. Every listen is slightly different, shaped by the machine that
+      plays it and the hands that rewind it.
+    </p>
+    
+    <h2>A Physical Memory</h2>
+    <p>
+      Sliding a cassette into a deck, pressing <em>play</em>, feeling the buttons click — it's a ritual. A moment of pause
+      before the music begins. There is something deeply grounding in that small sequence of actions. The tape itself
+      becomes a memory object: a concert someone recorded, a mixtape from a friend, a soundtrack to a time in life. The handwriting on the label, the scratches on the plastic, the fading ink — every detail tells a story. A cassette
+      is not just audio; it’s a fragment of a moment, carried through years.
+    </p>
 
-  <h2>Introduction</h2>
-    <p>This website is a collection of tangible objects — a small archive of things that can be touched, held, and kept. It explores why these items still matter and what kind of warmth they bring in contrast to digital media.</p>
+    <h2>The Mixtape Gesture</h2>
+    <p>
+      Before playlists were a click away, a mixtape required intention. Choosing songs, arranging them carefully, recording
+      them in real time — crafting a mixtape meant thinking about the listener with every track. It was an act of patience,
+      thoughtfulness, and affection. A mixtape wasn’t shared instantly. It was given. And receiving one meant knowing someone spent hours shaping something
+      just for you — a quiet, personal kind of love.
+    </p>
 
-    <h2>Why Tangible Matters</h2>
-    <p>In today's electronic society, almost everything has turned into screens and files. Yet physical objects carry a unique sense of presence: the texture of paper, the weight of a vinyl record, or the sound of a cassette tape spinning. They feel alive in a way that digital cannot replace.</p>
+    <h2>The Rewind</h2>
+    <p>
+      Rewinding a cassette is its own kind of slowness. Watching the spools turn, waiting for the moment when the tape clicks
+      back into place, is a reminder that not everything needs to be instant. Music used to take time — to queue, to rewind,
+      to revisit. That pause creates space. Space to listen. Space to feel. Space to remember.
+    </p>
 
-    <h2>My Perspective</h2>
-    <p>I have always been drawn to real, physical things. A handwritten note feels more personal than a text message, and listening to music on a CD or vinyl feels more intentional than streaming. These objects create simple rituals and moments of connection that bring comfort and warmth.</p>
-
-
-
-
-
+    <h2>Why It Still Matters</h2>
+    <p>
+      Cassette tapes endure not because they are convenient, but because they are honest. They capture the warmth of sound,
+      the marks of time, the presence of the person who recorded them. They remind us that music can be imperfect and still
+      deeply meaningful — maybe even more meaningful because of its imperfections. In a world of endless streaming and frictionless choice, a cassette offers something rare: a moment of physicality,
+      intention, and slow listening. Sometimes, the things we have to wait for are the ones that stay with us the longest.
+    </p>
+  </main>
 </body>
-<nav>
-  <a href="/">Home</a>
-</nav>
 </html>
