--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -74,5 +74,14 @@
     }
   });
 </script>
+<div class="video-container">
+  <iframe width="700" height="400"
+    src="https://www.youtube.com/embed/amXrOwTGSkE?si=Hj6Tph_uShG1j5vq"
+    title="Cassette Tape Video"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 </body>
 </html>
