--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -15,6 +15,10 @@
   <main>
     <h1>Vinyl Records</h1>
 
+   <div class="record-wrapper">
+    <div class="vinyl-record"></div>
+   </div>
+
     <h2>The Warmth of Sound</h2>
     <p>Vinyl records are more than just a way to play music — they carry weight, texture, and warmth. The gentle crackle of the needle touching the groove feels alive, reminding us that imperfection can be beautiful. Holding a record, turning it over, and studying its cover art transforms listening into a mindful ritual.</p>
 
