--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -30,6 +30,16 @@
 
     <h2>Why It Matters</h2>
     <p>Vinyl demands attention. Unlike endless digital playlists, it asks you to commit to an album, to sit down and listen. Each record is not only sound, but also an object: the artwork, the texture, and the small imperfections that make every listen unique. It’s music you can touch, see, and feel.</p>
+    <div class="video-container">
+      <iframe width="700" height="400"
+        src="https://www.youtube.com/embed/jxAj3kv9hVM?si=6yE7qqxNf-bQtPwX"
+        title="Vinyl Records Video"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+    </div>
+    
   </main>
 </body>
 </html>
