--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -43,6 +43,17 @@
 
     <h2>Why It Matters</h2>
     <p>Each roll has only 24 or 36 shots, so every click feels important. Film slows us down, makes us think, and shows that photography can be physical and intentional. Film photos are not just files on a screen — they are real objects we can hold, share, and treasure.</p>
+  
+  <div class="video-container">
+      <iframe width="700" height="400"
+        src="https://www.youtube.com/embed/9rGRF5S7bGk?si=_FCMMXTX07YbAVkj"
+        title="Film Cameras Video"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+    </div>
+    
   </main>
 </body>
 </html>
