--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -11,6 +11,12 @@
 
 <body>
   <main>
+    
+    <div class="yarn-line-wrapper">
+      <div class="yarn-line"></div>
+      <div class="yarn-ball">🧶</div>
+    </div>
+
     <h1>Threads of Time</h1>
 
     <h2>The Process</h2>
