--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -25,7 +25,13 @@
 
     <h2>Why It Still Matters</h2>
     <p>Letters remind us that connection can be slow, imperfect, and deeply human. Bringing back this practice — even once in a while — is like bringing warmth back into communication. It’s not about nostalgia, but about remembering that sometimes the most meaningful things take time.</p>
+  
+    <div class="prompt-section">
+      <button id="prompt-btn">Give me a letter prompt</button>
+      <p id="prompt-text"></p>
+    </div>
   </main>
+  
   <script>
     const prompts = [
       "Write a letter to your future self.",
