--- a/entry-9/index.html
+++ b/entry-9/index.html
@@ -14,7 +14,6 @@
   <main>
     <h1>Handmade Pottery</h1>
 
-  <iframe src="https://editor.p5js.org/laih864-gif/full/AyIQhReCt"></iframe>
     <h2>Clay and Hands</h2>
     <p>Handmade pottery begins with something very simple: a lump of clay and a pair of hands. The clay is soft, heavy, and a little stubborn. As you press, pull, and turn it, the material slowly responds. It remembers every touch, every correction, and every hesitation. Unlike working on a screen, where changes can be undone with one click, shaping clay means committing to each movement. The form that appears is not only the result of skill, but also of the body’s rhythm and mood in that moment.</p>
 
@@ -32,7 +31,7 @@
   
   <div class="video-container">
       <iframe width="560" height="315" 
-        src="https://youtu.be/_6a7vOp7Nm0?si=HEHvH-qpmv3Ch2h_" 
+        src="https://www.youtube.com/embed/_6a7vOp7Nm0?si=HEHvH-qpmv3Ch2h_" 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
